--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.1",
     "streamifier": "^0.1.1"
   }
 }
