--- a/package.json
+++ b/package.json
@@ -9,6 +9,25 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.21",
     "streamifier": "^0.1.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "name": "portfolio.io",
+  "version": "1.0.0",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kedar-devs/Portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kedar-devs/Portfolio/issues"
+  },
+  "homepage": "https://github.com/kedar-devs/Portfolio#readme",
+  "description": ""
 }
