--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
+    "react-loader-spinner": "^5.3.4",
     "streamifier": "^0.1.1"
   },
   "scripts": {
